# coursework-Atomic-habits

./: .dockerignore  .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
deploy/: docker-compose.yml
habits/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_action_owner.py  0003_alter_habit_owner.py  0004_alter_habit_time_to_complete.py  0005_alter_habit_periodicity_alter_habit_time_to_complete.py  0006_alter_habit_action_alter_habit_associated_habit_and_more.py
htmlcov/: index.html
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
