[tool.poetry]
name = "coursework-atomic-habits"
version = "0.1.0"
description = ""
authors = ["Anna <azeleranskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
djangorestframework-simplejwt = "^5.5.1"
django-filter = "^25.1"
redis = "^6.4.0"
requests = "^2.32.5"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"
mypy = "^1.18.2"
django-cors-headers = "^4.9.0"
drf-yasg = "^1.21.10"
coverage = "^7.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'